--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@testing-library/user-event": "^7.1.2",
     "date-fns": "^2.13.0",
     "react": "^16.13.1",
+    "react-device-detect": "^1.12.1",
     "react-dom": "^16.13.1",
     "react-media-hook": "^0.4.7",
     "react-scripts": "3.4.1",
